opam-version: "2.0"
name: "components"
maintainer: "monstasat@yandex.ru"
authors: ["Alexander Yanin"]
homepage: "https://github.com/monstasat/components"
dev-repo: "git+https://github.com/monstasat/components.git"
bug-reports: "https://github.com/monstasat/components/issues"
license: "MIT"
synopsis: "UI components for the Web"
description: """
This UI library provides Tyxml markup for Web components that can be used both
on client and server side. The library is pure OCaml. Components are designed
according to Google Material Design guidelines.
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11"}
  "tyxml"
  "color"
]
