opam-version: "2.0"
name: "components"
maintainer: "monstasat@yandex.ru"
authors: ["Alexander Yanin"]
homepage: "https://github.com/monstasat/components"
dev-repo: "git+https://github.com/monstasat/components.git"
bug-reports: "https://github.com/monstasat/components/issues"
license: "MIT"
synopsis: "UI components for the Web"
description: """
This library adds interactivity to Web components provided by components-tyxml lib.
The library is client-side only.
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11"}
  "components-tyxml" {=version}
  "js_of_ocaml"
  "js_of_ocaml-lwt"
  "js_of_ocaml-tyxml"
  "js_of_ocaml-ppx"
]
